# audio-transcriber

./: .gitignore  README.md  main.py  pyproject.toml
input/: input.txt
processor/: cleaner.py  transcriber.py
src/: main.py
src/processor/: cleaner.py  transcriber.py
src/utils/: helpers.py
temp/: temp.txt
utils/: helpers.py
