[project]
name = "audio-transcriber"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ctranslate2>=4.8.0",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.23.1.3",
    "python-magic>=0.4.27",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
]
